--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+
+}
+
+.logo{
+  height: 13vh;
+  margin-right:10px;
 }
 
 /* .App-logo {
@@ -7,15 +12,16 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 } */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appHeader {
+  background-color: #31405f;
+  height:15vh;
   display: flex;
   /* flex-direction: column; */
   align-items: center;
@@ -23,6 +29,51 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.appBar {
+  background-color: #EE6352;
+  display: flex;
+  height:5vh;
+  /* margin-bottom: 10px; */
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.appBody {
+  background-color: #bfc6cc;
+  min-height: 80vh;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.offCenter{
+  margin-left: 15%;
+}
+
+.submitBtn{
+  background-color: #EE6352;
+  border: 1px solid #EE6352;
+  color: white;
+  cursor:pointer;
+}
+
+.submitBtn:hover {
+  background-color: #d65645;
+  border: 1px solid #d65645;
+  color: white;
+  cursor:pointer;
+}
+
+
 
 /* .App-link {
   color: #61dafb;
