--- a/src/styling/loginStyles.css
+++ b/src/styling/loginStyles.css
@@ -1,10 +1,10 @@
-.login {
+.form {
     justify-content: center;
     align-items: center;
-}
-.formSection {
-    flex-direction: row;
-    justify-content: center;
+    margin-top: -7vh;
+    background-color: #6B8EAE;
+    padding: 30px;
+    border: 1px solid #31405f;
 }
 
 .formLabel {
@@ -13,7 +13,7 @@
 }
 
 .formInput {
-    align-self: flex-end;
+    width: 100%
 }
 
 .button {
