--- a/src/styling/bankAccountDetailsStyles.css
+++ b/src/styling/bankAccountDetailsStyles.css
@@ -32,6 +32,11 @@
     font-weight: 500;
 }
 
+.downloadBtn{
+    background-color:rgb(224, 224, 224);
+    margin-top:-10px;
+}
+
 .spacing{
-    margin-top:5%;
+    margin-top:3%;
 }
